# iiif-test-manifests

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
manifests/: helpers.py  registry.py
manifests/basic/: multipage.py  simple.py
manifests/collections/: top.py
manifests/viewing/: btt.py  ltr.py  rtl.py  ttb.py
scripts/: build.py  build_images.py  build_site.py
src_images/super-res/: webb-helix-nebula.tif
templates/: index.html  triiiceratops.html  viewer.html
